--- a/pom.xml
+++ b/pom.xml
@@ -6,8 +6,13 @@
 
     <groupId>com.dawsonsystems</groupId>
     <artifactId>mongo-store</artifactId>
-    <version>1.0-SNAPSHOT</version>
-
+    <version>1.0</version>
+    <licenses>
+        <license>
+            <name>Apache 2</name>
+            <url>http://www.apache.org/licenses/LICENSE-2.0.txt</url>
+        </license>
+    </licenses>
     <dependencies>
         <dependency>
             <groupId>junit</groupId>
