--- a/pom.xml
+++ b/pom.xml
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
-            <version>2.4</version>
+            <version>${mongo-java-driver.version}</version>
         </dependency>        
         <dependency>
             <groupId>org.jmock</groupId>
@@ -119,34 +119,86 @@
                 <groupId>org.codehaus.gmaven</groupId>
                 <artifactId>gmaven-plugin</artifactId>
             </plugin>
-			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
-				</configuration>
-			</plugin>
-		</plugins>
-	</build>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>2.3.2</version>
+                <configuration>
+                    <source>1.6</source>
+                    <target>1.6</target>
+                </configuration>
+            </plugin>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-resources-plugin</artifactId>
+                <version>2.5</version>
+                <executions>
+                    <execution>
+                        <id>copy-resources</id>
+                        <phase>integration-test</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                            <outputDirectory>${env.CATALINA_HOME}/lib</outputDirectory>
+                            <resources>
+                                <resource>
+                                    <directory>${basedir}/target</directory>
+                                    <includes>
+                                        <include>${project.build.finalName}.jar</include>
+                                    </includes>
+                                </resource>
+                                <resource>
+                                    <directory>${settings.localRepository}/org/mongodb/mongo-java-driver/${mongo-java-driver.version}/</directory>
+                                    <includes>
+                                        <include>mongo-java-driver-${mongo-java-driver.version}.jar</include>
+                                    </includes>
+                                </resource>
+                            </resources>
+                        </configuration>
+                    </execution>
+                    <execution>
+                        <id>copy-configuration</id>
+                        <phase>integration-test</phase>
+                        <goals>
+                            <goal>copy-resources</goal>
+                        </goals>
+                        <configuration>
+                       <outputDirectory>${env.CATALINA_HOME}/conf</outputDirectory>
+                       <resources>
+                        <resource>
+                            <directory>${basedir}/src/test/resources/conf</directory>
+                            <includes>
+                                <include>context.xml</include>
+                            </includes>
+                        </resource>
+                       </resources>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
     <distributionManagement>
-	    <repository>
-	        <id>repo</id>
-	        <url>https://github.com/dawsonsystems/mavenrepo/raw/master/releases</url>
-	    </repository>
-	    <snapshotRepository>
-	        <id>snapshot-repo</id>
-	        <url>https://github.com/dawsonsystems/mavenrepo/raw/master/releases</url>
-	    </snapshotRepository>
-	</distributionManagement>
+        <repository>
+            <id>repo</id>
+            <url>https://github.com/dawsonsystems/mavenrepo/raw/master/releases</url>
+        </repository>
+        <snapshotRepository>
+            <id>snapshot-repo</id>
+            <url>https://github.com/dawsonsystems/mavenrepo/raw/master/releases</url>
+        </snapshotRepository>
+    </distributionManagement>
     <repositories>
-      <repository>
-        <id>wordrak</id>
-        <url>http://wordrak.github.com/repo</url>
-      </repository>
-    </repositories>    
+        <repository>
+            <id>wordrak</id>
+            <url>http://wordrak.github.com/repo</url>
+        </repository>
+    </repositories>
     <properties>
         <gmaven.version>1.2</gmaven.version>
         <groovy.version>1.7.0</groovy.version>
+        <mongo-java-driver.version>2.4</mongo-java-driver.version>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
     </properties>
 </project>
